[package]
name = "sorting_comparison"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[dev-dependencies]
criterion = {version="0.3",features=["html_reports"]}
rand = "0.8"

[[bench]]
name = "sorting_bench"
harness=false